<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FDD835"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingTop="12dp"
    android:paddingRight="6dp"
    android:paddingBottom="12dp">

    <SeekBar
        android:id="@+id/seekBar_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:max="100"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <SeekBar
        android:id="@+id/seekBar_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_x"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:max="100"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <SeekBar
        android:id="@+id/seekBar_z"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_y"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:max="100"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <SeekBar
        android:id="@+id/seekBar_or_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_Orientation"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:max="270"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <SeekBar
        android:id="@+id/seekBar_or_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_or_x"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:max="270"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <SeekBar
        android:id="@+id/seekBar_or_z"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_or_y"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:max="270"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="6dp"
        android:text="@string/timestamp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:text="@string/accuracy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:text="@string/sensorx"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView1"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_timestamp"
        android:layout_alignStart="@+id/_timestamp"
        android:layout_alignParentEnd="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:text="@string/sensory"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/_sensorx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_accuracy"
        android:layout_alignStart="@+id/_accuracy"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/_sensory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView1"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:text="@string/sensorz"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/_sensorz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignStart="@+id/_sensory"
        android:layout_alignBottom="@+id/textView5"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

    <TextView
        android:id="@+id/_Orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_z"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:text="@string/orientation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#33691E" />

</RelativeLayout>